# Quake-Inspired-Game-Engine

./: README.md  engine_architecture.md
engine/: CMakeLists.txt
engine/core/: core.hpp  log.cpp  log.hpp  math.hpp  memory.cpp  memory.hpp  types.hpp
engine/tests/: core_test.cpp
